# STEX

./: .env  .gitignore  Cargo.toml  README.md  api.drawio  init.pgsql
Backend/: .gitignore  Cargo.toml  README.md  secret.json
Backend/migrations/2023-02-07-041502_indexing/: down.sql
Backend/migrations/2023-02-12-105255_authing/: down.sql
Backend/migrations/2023-03-01-091543_posts_uname/: down.sql  up.sql
Backend/src/: main.rs  schema.rs
Backend/src/actix_stex/: auth.rs  handlers.rs  models.rs
Backend/src/auth_stex/: jwt_auth.rs  models.rs
Backend/src/diesel_stex/: handlers.rs  mod.rs  models.rs
Backend/src/not-bin/: show_posts.rs
Frontend/: README.md  pubspec.yaml
Frontend/lib/: main.dart
Frontend/lib/models/: question.dart  user.dart
Frontend/lib/utils/: answer_editor.dart  app_bar.dart  auth.dart  globals.dart  post.dart  post_list.dart  prefs.dart  preview.dart  question_editor.dart  web.dart
Frontend/lib/views/: create_question.dart  edit_question.dart  homepage.dart  post_list.dart  question.dart  search.dart  search_post.dart  search_tags.dart  sign_in.dart  sign_up.dart  (+1 more)
Frontend/test/: widget_test.dart
Frontend/web/: index.html  manifest.json
diesel_stex/src/: lib.rs  schema.rs
migrations/2023-02-04-060449_create_posts/: down.sql
migrations/2023-02-04-060449_create_tables/: down.sql  up.sql
migrations/2023-02-07-041502_indexing/: up.sql
migrations/2023-02-11-070625_populate/: up.sql
migrations/2023-02-12-105255_authing/: up.sql
migrations/2023-02-23-035802_defs/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/actix_stex/: auth.rs  handlers.rs  mod.rs  models.rs
src/auth_stex/: jwt_auth.rs  mod.rs  models.rs
src/diesel_stex/: handlers.rs  mod.rs  models.rs
