[package]
name = "DBMS"
version = "0.1.0"
edition = "2021"
RUSTFLAGS='-L /opt/homebrew/opt/libpq/lib'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.7"
text_io = "0.1.12"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"