[package]
name = "DBMS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.6"
futures = "0.3.26"
r2d2 = "0.8.10"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
actix-service = "2.0.2"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
argon2 = "0.4.1"
jsonwebtoken = "8.2.0"